compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__patterns__pattern_as.snap
---
source: compiler-core/src/fsharp/tests/patterns.rs
expression: "pub fn a(x) {\n  case x {\n    Ok(1 as y) -> 1\n    _ -> 0\n  }\n}"
---
module rec my.``mod``

let a<'a> (x: Result<int64, 'a>) = begin
    match x with
    | (Ok(1L as y)) ->
        1L
    | _ ->
        0L
end
