compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__patterns__string_prefix_as_pattern_with_list.snap
---
source: compiler-core/src/fsharp/tests/patterns.rs
expression: "pub fn a(x) {\n  case x {\n    [\"a\" as a <> _, \"b\" as b <> _] -> a <> b\n    _ -> \"\"\n  }\n}"
---
module rec my.``mod``

let a (x: list<string>) = begin
    match x with
    | [Gleam_codegen_string_parts "a" (a, _); Gleam_codegen_string_parts "b" (b, _)] ->
        a + b
    | _ ->
        ""
end
