compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__patterns__string_prefix_as_pattern_with_multiple_subjects_and_guard.snap
---
source: compiler-core/src/fsharp/tests/patterns.rs
expression: "pub fn a(x) {\n  case x, x {\n    _, \"a\" as a <> rest if rest == \"a\" -> a\n    _, _ -> \"a\"\n  }\n}"
---
module rec my.``mod``
let a (x: string) = begin
    match (x, x) with
    | (_, Gleam_codegen_string_parts "a" (a, rest)) when rest = "a" ->
        a
    | (_, _) ->
        "a"
end
